[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/events/broccolitron.gd" type="Script" id=1]
[ext_resource path="res://images/events/broccolitron/broccolitron_en.png" type="Texture" id=2]
[ext_resource path="res://images/events/roulette/title_light.png" type="Texture" id=3]
[ext_resource path="res://images/events/broccolitron/broccolitron_aura.png" type="Texture" id=4]
[ext_resource path="res://images/events/broccolitron/broccolitron.png" type="Texture" id=5]
[ext_resource path="res://scenes/other/slot.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/other/duck.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/events/broccolitron/nest_back.png" type="Texture" id=8]
[ext_resource path="res://images/events/broccolitron/nest.png" type="Texture" id=9]
[ext_resource path="res://images/popups/go_back.png" type="Texture" id=10]
[ext_resource path="res://images/popups/go_back_pressed.png" type="Texture" id=11]
[ext_resource path="res://fonts/effloresce.ttf" type="DynamicFontData" id=12]

[sub_resource type="GDScript" id=1]

script/source = "extends TextureRect


var es_texture = preload(\"res://images/events/broccolitron/broccolitron_es.png\")


func _ready():
	if game.lang.language == \"es\":
		set_texture(es_texture)
"

[sub_resource type="Animation" id=2]

resource_name = "rotate"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("light:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=3]

size = 55
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings", "font_data" ]

[sub_resource type="GDScript" id=4]

script/source = "extends Label

func _ready():
	set_text(game.lang.STOP)
"

[sub_resource type="Animation" id=5]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 300 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("btn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]

length = 0.1
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("btn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("btn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="broccolitron" type="Control" groups=[
"event",
"resizable",
]]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Script", "Transform", "Visibility", "Z Index" ]

[node name="bg" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.588235 )
_sections_unfolded = [ "Rect" ]

[node name="title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -532.0
margin_top = -709.0
margin_right = 532.0
margin_bottom = -465.0
rect_pivot_offset = Vector2( 532, 122 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
script = SubResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="light" type="Sprite" parent="title"]
show_behind_parent = true
position = Vector2( 532, 84 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="title"]
root_node = NodePath("..")
autoplay = "rotate"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate = SubResource( 2 )
blend_times = [  ]

[node name="broccolitron" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="aura" type="Sprite" parent="broccolitron"]
texture = ExtResource( 4 )

[node name="texture" type="Sprite" parent="broccolitron"]
texture = ExtResource( 5 )
offset = Vector2( 2, 0 )
_sections_unfolded = [ "Offset" ]

[node name="slots" type="Control" parent="broccolitron/texture"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -840.0
margin_top = -493.0
margin_right = -87.0
margin_bottom = -75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="slot1" parent="broccolitron/texture/slots" instance=ExtResource( 6 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 0.0
margin_top = -158.5
margin_right = 211.0
margin_bottom = 158.5

[node name="slot2" parent="broccolitron/texture/slots" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.5
margin_top = -158.5
margin_right = 105.5
margin_bottom = 158.5

[node name="slot3" parent="broccolitron/texture/slots" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -211.0
margin_top = -158.5
margin_right = 0.0
margin_bottom = 158.5

[node name="duck" parent="broccolitron" instance=ExtResource( 7 )]
position = Vector2( 7.46204, -260.213 )

[node name="nest_back" type="Sprite" parent="broccolitron/duck"]
show_behind_parent = true
position = Vector2( -5.46204, -12.7866 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="nest" type="Sprite" parent="broccolitron/duck"]
position = Vector2( -5.46204, 21.2134 )
texture = ExtResource( 9 )

[node name="stop" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = 408.0
margin_right = 270.0
margin_bottom = 868.0
rect_min_size = Vector2( 540, 460 )
rect_pivot_offset = Vector2( 270, 230 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Rect", "Textures", "Visibility" ]

[node name="btn" type="TextureButton" parent="stop"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 300.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Mouse", "Rect", "Textures", "Visibility", "texture_normal" ]

[node name="text" type="Label" parent="stop/btn"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Stop!"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = SubResource( 4 )
_sections_unfolded = [ "Mouse", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="anim" type="AnimationPlayer" parent="stop"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/appear = SubResource( 5 )
anims/disappear = SubResource( 6 )
blend_times = [  ]

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "appear"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/appear = SubResource( 7 )
anims/disappear = SubResource( 8 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false

[connection signal="pressed" from="stop/btn" to="." method="_on_btn_pressed"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
